fix display flex on mobile issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
 }
 
 .App-header {
@@ -11,6 +11,7 @@
   flex-wrap: wrap;
   color: white;
   margin-bottom: 2%;
+  height: 5%;
 }
 
 .App-header > h1 {
