--- a/src/Tracker/Tracker.css
+++ b/src/Tracker/Tracker.css
@@ -1,3 +1,6 @@
 .Tracker {
-    transition: display 5s linear;
+    /* transition: display 5s linear; */
+    height: 95%;
+    display: flex;
+    flex-direction: column;
 }
