--- a/src/Tracker/TrackerHeader/TrackerHeader.css
+++ b/src/Tracker/TrackerHeader/TrackerHeader.css
@@ -16,7 +16,7 @@
     flex-basis: 40%;
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 
 .searchDiv > * {
